--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,4 +3,14 @@
   --text-color: #837E9F;
   --bg-cards: #302F3D;
   --bg-techs: #CB92B1;
+
+  font-size: 62.5%; 
+  /* 1rem = 10px */
 }
+* {
+  margin: 0;
+  padding: 0;
+ box-sizing: border-box;
+ font-family: 'Merriweather Sans', sans-serif;
+}
+
