--- a/src/styles/aside.css
+++ b/src/styles/aside.css
@@ -27,7 +27,11 @@ aside div{
   display: flex;
   border-radius: 5%;
 }
-
+div h3 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin: 3rem 0 0 2rem;
+}
 div.profile {
   margin-top: 4rem;
   margin-top: 4rem;
@@ -70,7 +74,7 @@ color: var(--text-color);
 }
 div.contact ul {
   margin: 3rem auto 0 4rem;
- align-items: left;
+ align-items: center;
   list-style: none;
 
 }
@@ -86,10 +90,56 @@ div.contact ul li {
  
 }
 
-#contactFrase{
-  font-weight: bold;
-  font-size: 1.6rem;
+div.contact ul li#contactFrase{
+  display: flex;
   align-items: center;
+  font-size: 2rem;
+  font-weight: 700;
+}
+div.tec h3{
+  margin-bottom: 0.5rem;
+}
+div.tec {
+display: flex;
+flex-direction: column;
+max-width: 348px;
+height: 208px;
+
+
+}
+div.tec div.technologies  {
+  
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-area: auto;
+  margin: 0;
+  align-items: center;
+  padding: 0 3rem 0 3rem;
+
+  color: var(--body-bg-color);
+
 }
 
-div.contact i
+div.tec div.technologies a {
+  text-decoration: none;
+background-color: var(--bg-techs);
+border-radius: 3rem;
+font-weight: 700;
+font-size: 1rem;
+line-height: 1.3rem;
+text-align: center;
+text-transform: uppercase;
+padding: 0.6rem 0.4rem 0.6rem 0.4rem;
+ width: 8.6rem;
+height: 2.4rem; 
+align-items: center;
+margin-top: 1.5rem;
+color: black;
+
+}
+
+div.tec div.technologies a:hover{
+  transition: 0.2ms;
+  background-color: #383647;
+  color: var(--text-color);
+}
