--- a/src/styles/aside.css
+++ b/src/styles/aside.css
@@ -52,7 +52,7 @@ div.profile h2 {
   margin-bottom: 4.9rem;
 }
 
-div.profile p.profilePic{
+div p.profilePic{
 width: 12.8rem;
 height: 12.8rem;
 left: 15rem;
