--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -191,15 +191,13 @@ div.textMessage p{
   font-weight: 400;
   
 }
-p.messagePic{
+div img.messagePic{
   width: 12.8rem;
-height: 12.8rem;
-
-background: url();
-border: 2px solid #00FF00;
-border-radius: 100%;
-
-}
+  height: 12.8rem;
+  
+  border: 2px solid ;
+  border-radius: 100%;
+  }
 
 p strong {
   font-size: 1.6;
