--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,31 +1,26 @@
 :root {
-  --body-bg-color: #22212C;
-  --text-color: #837E9F;
-  --bg-cards: #302F3D;
-  --bg-techs: #CB92B1;
+  --body-bg-color: #22212c;
+  --text-color: #837e9f;
+  --bg-cards: #302f3d;
+  --bg-techs: #cb92b1;
 
-  font-size: 62.5%; 
+  font-size: 62.5%;
   /* 1rem = 10px */
 }
 * {
   margin: 0;
   padding: 0;
- box-sizing: border-box;
- font-family: 'Merriweather Sans', sans-serif;
- text-decoration: none;
- color: var(--text-color);
+  box-sizing: border-box;
+  font-family: 'Merriweather Sans', sans-serif;
+  text-decoration: none;
+  color: var(--text-color);
 }
-
-
-
 
 main div {
   color: var(--text-color);
   display: flex;
-  
+
   border-radius: 20px;
-
-
 }
 
 main div h3 {
@@ -39,7 +34,7 @@ main div ul {
   justify-content: space-between;
 }
 
-div.myProject{
+div.myProject {
   margin: 4rem 4rem 3rem 0;
   width: 94.2rem;
   height: 8.6rem;
@@ -52,81 +47,75 @@ div.myProject{
   background-color: var(--bg-cards);
 }
 
-div.myProject a{
- font-size: 1.4rem;
- margin-right: 3rem;
+div.myProject a {
+  font-size: 1.4rem;
+  margin-right: 3rem;
 
- line-height: 1.3rem;
-text-align: center;
+  line-height: 1.3rem;
+  text-align: center;
 
-padding: 0.8rem 0.5rem 0.7rem 0.8rem;
+  padding: 0.8rem 0.5rem 0.7rem 0.8rem;
 
-border-radius: 7px;
-transition: 0.5s;
-
+  border-radius: 7px;
+  transition: 0.5s;
 }
-div.myProject a:hover{
-background-color: #383647;
-transition: 0.5s;
-
+div.myProject a:hover {
+  background-color: #383647;
+  transition: 0.5s;
 }
 
- main div.projects{
+main div.projects {
   display: flex;
-background-color: var(--body-bg-color);
-margin-bottom: 3rem;
-
+  background-color: var(--body-bg-color);
+  margin-bottom: 3rem;
 }
-div.projects div.project{
+div.projects div.project {
   width: 45.1rem;
-height: 18.6rem;
-flex-direction: column;
-background-color: var(--bg-cards);
-padding: 3rem;
+  height: 18.6rem;
+  flex-direction: column;
+  background-color: var(--bg-cards);
+  padding: 3rem;
 }
 
-div.projects div.project img{
-  width: 2.0rem;
-  height: 2.0rem;
+div.projects div.project img {
+  width: 2rem;
+  height: 2rem;
 }
-div.nameProject{
+div.nameProject {
   align-items: center;
 }
 
-div.project a{
+div.project a {
   text-decoration: none;
   text-align: center;
   padding: 0.5rem 0.8rem 0.8rem 0.8rem;
 
   border-radius: 7px;
 
-border-radius: 7px;
+  border-radius: 7px;
   font-weight: 700;
   font-size: 1.6rem;
   transition: 0.5s;
 }
-div.project a:hover{
-transition: 0.5s;
-background-color:#383647 ;
-
-
+div.project a:hover {
+  transition: 0.5s;
+  background-color: #383647;
 }
 
-
-div.projects div.projectOne{
+div.projects div.projectOne {
   margin-right: 3rem;
 }
-div.projects div.project div.nameProject{
-gap:1.7rem;
-margin-bottom: 2rem;
+div.projects div.project div.nameProject {
+  gap: 1.7rem;
+  margin-bottom: 2rem;
 }
 
-div.projects div.project p{
+div.projects div.project p {
   font-weight: 400;
-font-size: 1.4rem;
+  font-size: 1.4rem;
 }
 
- div.infoProject{
+div.infoProject {
   margin-top: 3rem;
   margin-bottom: 3rem;
   justify-content: space-between;
@@ -134,73 +123,68 @@ font-size: 1.4rem;
 }
 
 div.infoGitHub {
+  align-items: center;
   gap: 1.6rem;
 }
 div.infoGitHub div {
   gap: 0.8rem;
 }
 
-div.projectTec{
+div.projectTec {
   align-items: center;
   gap: 0.8rem;
-
 }
-p.elipseCss{
+p.elipseCSS {
   width: 1.5rem;
-height: 1.5rem;
+  height: 1.5rem;
 
-border-radius: 100%;
-background: #9747d1;
-border: 2px solid #837E9F;
-
+  border-radius: 100%;
+  background: #9747d1;
+  border: 2px solid #837e9f;
 }
-p.elipseHtml{
+p.HTML {
   width: 1.5rem;
-height: 1.5rem;
+  height: 1.5rem;
 
-border-radius: 100%;
-background: #a01717;
-border: 2px solid #837E9F;
-
+  border-radius: 100%;
+  background: #a01717;
+  border: 2px solid #837e9f;
 }
-p.elipseJs{
+p.JavaScript {
   width: 1.5rem;
-height: 1.5rem;
+  height: 1.5rem;
 
-border-radius: 100%;
-background: #E7DE79;
-border: 2px solid #837E9F;
-
+  border-radius: 100%;
+  background: #d1c761;
+  border: 2px solid #837e9f;
 }
 
-div.message{
+div.message {
   background-color: var(--bg-cards);
   width: 94.2rem;
   height: 8.6rem;
   margin-bottom: 3rem;
 }
 
-div.textMessage{
+div.textMessage {
   width: 94.2rem;
-height: 20.1rem;
-padding: 3rem;
-gap: 2rem;
+  height: 20.1rem;
+  padding: 3rem;
+  gap: 2rem;
 }
-div.textMessage p{
+div.textMessage p {
   font-size: 1.4rem;
   font-weight: 400;
-  
 }
-div img.messagePic{
+div img.messagePic {
   width: 12.8rem;
   height: 12.8rem;
-  
-  border: 2px solid ;
+
+  border: 2px solid;
   border-radius: 100%;
-  }
+}
 
 p strong {
   font-size: 1.6;
   font-weight: 700;
-  
 }
