--- a/src/styles/aside.css
+++ b/src/styles/aside.css
@@ -1,23 +1,23 @@
 :root {
-  --body-bg-color: #22212C;
-  --text-color: #837E9F;
-  --bg-cards: #302F3D;
-  --bg-techs: #CB92B1;
+  --body-bg-color: #22212c;
+  --text-color: #837e9f;
+  --bg-cards: #302f3d;
+  --bg-techs: #cb92b1;
 
-  font-size: 62.5%; 
+  font-size: 62.5%;
   /* 1rem = 10px */
 }
 * {
   margin: 0;
   padding: 0;
- box-sizing: border-box;
- font-family: 'Merriweather Sans', sans-serif;
+  box-sizing: border-box;
+  font-family: "Merriweather Sans", sans-serif;
 }
-aside{
+aside {
   width: auto;
 }
 
-aside div{
+aside div {
   width: 30rem;
   margin-left: 3rem;
   margin-bottom: 3rem;
@@ -36,13 +36,10 @@ div.profile {
   margin-top: 4rem;
   align-items: center;
   flex-direction: column;
-
-  
- 
 }
 
 div.profile h1 {
- font-size: 2.3rem;
+  font-size: 2.3rem;
   font-weight: 700;
   margin-bottom: 1rem;
 }
@@ -52,61 +49,55 @@ div.profile h2 {
   margin-bottom: 4.9rem;
 }
 
-div img.profilePic{
-width: 12.8rem;
-height: 12.8rem;
-left: 15rem;
-top: 7.2rem;
-margin-top: 3.2rem;
+div img.profilePic {
+  width: 12.8rem;
+  height: 12.8rem;
+  left: 15rem;
+  top: 7.2rem;
+  margin-top: 3.2rem;
 
-margin-bottom: 3rem;
+  margin-bottom: 3rem;
 
-background: url();
-border: 2px solid #00FF00;
-border-radius: 100%;
+  background: url();
+  border: 2px solid #00ff00;
+  border-radius: 100%;
 }
 
 div.contact a {
-text-decoration: none;
-color: var(--text-color);
-
+  text-decoration: none;
+  color: var(--text-color);
 }
 div.contact ul {
   margin: 3rem auto 0 4rem;
- align-items: center;
+  align-items: center;
   list-style: none;
-
 }
 
 div.contact ul li {
- display: flex;
- gap: 2rem;
- font-size: 1.3rem;
- font-weight: 400;
- align-items: center;
- margin-bottom: 3rem;
- 
- 
+  display: flex;
+  gap: 2rem;
+  font-size: 1.3rem;
+  font-weight: 400;
+  align-items: center;
+  margin-bottom: 3rem;
 }
 
-div.contact ul li#contactFrase{
+div.contact ul li#contactFrase {
   display: flex;
   align-items: center;
   font-size: 2rem;
   font-weight: 700;
 }
-div.tec h3{
+div.tec h3 {
   margin-bottom: 0.5rem;
 }
 div.tec {
-display: flex;
-flex-direction: column;
-max-width: 34.8rem;
-height: 20.8rem;
-
+  display: flex;
+  flex-direction: column;
+  max-width: 34.8rem;
+  height: 20.8rem;
 }
-div.tec div.technologies  {
-  
+div.tec div.technologies {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   grid-area: auto;
@@ -116,60 +107,50 @@ div.tec div.technologies  {
   color: var(--body-bg-color);
   margin-left: 0;
 
-  transition: 0,05s;
-
-
+  transition: 0, 05s;
 }
-div.tec div.technologies a:hover{
-  transition: 0,5s;
+div.tec div.technologies a:hover {
+  transition: 0, 5s;
   background-color: #383647;
   color: var(--text-color);
 }
 
 div.tec div.technologies a {
   text-decoration: none;
-background-color: var(--bg-techs);
-border-radius: 3rem;
-font-weight: 700;
-font-size: 1rem;
-line-height: 1.3rem;
-text-align: center;
+  background-color: var(--bg-techs);
+  border-radius: 3rem;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 1.3rem;
+  text-align: center;
 
-padding: 0.6rem 0.4rem 0.6rem 0.4rem;
- width: 8.6rem;
-height: 2.4rem; 
-align-items: center;
-margin-top: 1.5rem;
-color: black;
-text-transform: uppercase;
+  padding: 0.6rem 0.4rem 0.6rem 0.4rem;
+  width: 8.6rem;
+  height: 2.4rem;
+  align-items: center;
+  margin-top: 1.5rem;
+  color: black;
+  text-transform: uppercase;
 }
-
-
 
 div.exp,
 div.education {
-  display: flex ;
+  display: flex;
   flex-direction: column;
 }
 
-
-
-
-
-
-div ul.infoLi{
+div ul.infoLi {
   list-style: none;
   font-size: 1.2rem;
 }
 
-div ul strong.topic
-{
+div ul strong.topic {
   font-size: 1.4rem;
-font-weight: 700;
+  font-weight: 700;
 }
 
 div.exp div,
-div.education div{
+div.education div {
   margin: 2rem 0rem 4rem 4rem;
   width: auto;
 }
