--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,17 +1,17 @@
 :root {
-  --body-bg-color: #22212C;
-  --text-color: #837E9F;
-  --bg-cards: #302F3D;
-  --bg-techs: #CB92B1;
+  --body-bg-color: #22212c;
+  --text-color: #837e9f;
+  --bg-cards: #302f3d;
+  --bg-techs: #cb92b1;
 
-  font-size: 62.5%; 
+  font-size: 62.5%;
   /* 1rem = 10px */
 }
 * {
   margin: 0;
   padding: 0;
- box-sizing: border-box;
- font-family: 'Merriweather Sans', sans-serif;
+  box-sizing: border-box;
+  font-family: 'Merriweather Sans', sans-serif;
 }
 body {
   background-color: var(--body-bg-color);
@@ -20,6 +20,4 @@ body {
 
 div.page {
   display: flex;
-  
 }
-
