--- a/src/style/index.css
+++ b/src/style/index.css
@@ -12,7 +12,10 @@
   padding: 0;
   box-sizing: border-box;
   font-family: 'Merriweather Sans', sans-serif;
+  text-decoration: none;
+  color: var(--text-color);
 }
+
 body {
   background-color: var(--body-bg-color);
   display: flex;
