--- a/src/style/index.css
+++ b/src/style/index.css
@@ -23,4 +23,22 @@ body {
 
 div.page {
   display: flex;
+
+  max-width: 100vw;
+  padding-left: 2rem;
+  padding-top: 3rem;
+  gap: 3rem;
+}
+
+@media screen and (max-width: 425px) {
+  div.page {
+    max-width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0;
+
+    padding: 2rem;
+    align-items: center;
+  }
 }
